kubernetes/apps/pomerium/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pomerium
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pomerium
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pomerium
    spec:
      securityContext:
        runAsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65532
      containers:
        - name: pomerium
          image: docker.io/pomerium/pomerium:v0.33.4
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /pomerium/config.yaml
              subPath: config.yaml
              readOnly: true
            - name: tmp
              mountPath: /tmp
          readinessProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            periodSeconds: 30
          startupProbe:
            tcpSocket:
              port: http
            failureThreshold: 60
            periodSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
      volumes:
        - name: config
          configMap:
            name: pomerium-config
        - name: tmp
          emptyDir: {}
