kubernetes/apps/pomerium/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pomerium
spec:
  selector:
    app.kubernetes.io/name: pomerium
  ports:
    - name: http
      port: 80
      targetPort: http
