kubernetes/apps/pomerium/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pomerium-authenticate
spec:
  hostnames:
    - pomerium.maxice8.com
  parentRefs:
    - name: public
      namespace: gateway-system
      sectionName: https
  rules:
    - backendRefs:
        - name: pomerium
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: syncthing
spec:
  hostnames:
    - syncthing.mashu.maxice8.com
  parentRefs:
    - name: public
      namespace: gateway-system
      sectionName: https
  rules:
    - backendRefs:
        - name: pomerium
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: asf
spec:
  hostnames:
    - asf.mashu.maxice8.com
  parentRefs:
    - name: public
      namespace: gateway-system
      sectionName: https
  rules:
    - backendRefs:
        - name: pomerium
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netdata
spec:
  hostnames:
    - netdata.mashu.maxice8.com
  parentRefs:
    - name: public
      namespace: gateway-system
      sectionName: https
  rules:
    - backendRefs:
        - name: pomerium
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backrest
spec:
  hostnames:
    - backrest.mashu.maxice8.com
  parentRefs:
    - name: public
      namespace: gateway-system
      sectionName: https
  rules:
    - backendRefs:
        - name: pomerium
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argus
spec:
  hostnames:
    - argus.mashu.maxice8.com
  parentRefs:
    - name: public
      namespace: gateway-system
      sectionName: https
  rules:
    - backendRefs:
        - name: pomerium
          port: 80
